kubernetes/argo-cd/applications/production-hm/opencost/kubernetes-manifests/hm-opencost-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hm-opencost-ingress
  namespace: production-hm-opencost
  annotations:
    kubernetes.io/ingress.class: traefik
    # https://doc.traefik.io/traefik/routing/providers/kubernetes-ingress/#on-ingress
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    # https://argo-cd.readthedocs.io/en/stable/user-guide/resource_hooks
    argocd.argoproj.io/hook: PostSync
  labels:
    app.kubernetes.io/name: hm-opencost-ingress
    app.kubernetes.io/part-of: production-hm-opencost
spec:
  rules:
    - host: hm-opencost.internal.hongbomiao.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hm-opencost
                port:
                  number: 9090
  tls:
    - hosts:
        - hm-opencost.internal.hongbomiao.com
      secretName: production-hm-opencost-certificate
